@@ -39,6 +39,8 @@ line_substring_11|POINT(0 0)
 line_substring_12|POINT Z (0.5 0.5 7.5)
 line_interpolate_point|POINT(0 0)
 line_interpolate_point|POINT Z (0.5 0.5 7.5)
+line_interpolate_point_3d|POINT Z (0 0 0)
+line_interpolate_point_3d|POINT Z (0 0 0.5)
 line_interpolate_points|POINT(0.7 0.7)
 line_interpolate_points|MULTIPOINT(0.3 0.3,0.6 0.6,0.9 0.9)
 addMeasure1|LINESTRING M (0 0 10,2 0 15,4 0 20)
